--- a/api/package.json
+++ b/api/package.json
@@ -1,8 +1,11 @@
 {
+  "engines": {
+    "node": "v17.3.0"
+  },
   "name": "api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
