create profileOverview component for profile page, showing user image, name, and navbar, and making it responsive for all viewports

--- a/api/config.json
+++ b/api/config.json
@@ -1,4 +1,4 @@
 {
-  "apiUrl": "https://ancient-badlands-61504.herokuapp.com",
-  "placeholder": ""
+  "apiUrl": "http://localhost:2000",
+  "placeholder": "https://ancient-badlands-61504.herokuapp.com"
 }
