--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "uuid": "^8.3.2"
   }
 }
