--- a/client/src/assets/config.json
+++ b/client/src/assets/config.json
@@ -1,4 +1,4 @@
 {
-  "apiUrl": "http://localhost:2000",
+  "apiUrl": "https://ancient-badlands-61504.herokuapp.com",
   "tempUrl": "https://ancient-badlands-61504.herokuapp.com"
 }
