add new api address

--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,4 +1,4 @@
 {
-  "apiUrl": "https://ancient-badlands-61504.herokuapp.com",
-  "tempUrl": "https://ancient-badlands-61504.herokuapp.com"
+  "apiUrl": "https://fb-messenger-api.herokuapp.com/",
+  "tempUrl": ""
 }
