--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,4 +1,4 @@
 {
-  "apiUrl": "https://fb-messenger-api.herokuapp.com/",
-  "tempUrl": ""
+  "apiUrl": "http://localhost:2000",
+  "tempUrl": "https://fb-messenger-api.herokuapp.com"
 }
